# whoisbuilding-fall24-compe561

./: .gitignore  README.md  pyproject.toml  test.db
app/: __about__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: users.py
backend/: README.md  compose.yml  pyproject.toml  requirements.txt  test.db
backend/src/app/: auth.py  config.py  crud.py  database.py  dtos.py  main.py  models.py  schemas.py  tests.py
backend/src/app/exceptions/: __init__.py  github.py
backend/src/app/routers/: github.py  likes.py  users.py
backend/src/app/scrape/: github.py
backend/src/app/services/: github.py  s3.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  project-structure.md  tailwind.config.ts
frontend/src/app/: layout.js  layout.tsx  page.js  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(text-pages)/about/: page.tsx
frontend/src/app/(text-pages)/support/: page.tsx
frontend/src/app/add/: page.tsx
frontend/src/app/dev/: page.tsx
frontend/src/app/edit/[project_id]/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profile/[username]/: loading.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/user/[username]/: page.tsx
frontend/src/components/: discord-icon.tsx  github-chart.tsx  github-icon.tsx  internal-link.tsx  linkedin-icon.tsx  pill-select.js  pill-select.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  textarea.tsx
frontend/src/core/errors/types/: UserLoginError.tsx
frontend/src/core/responses/: github.ts  users.ts
frontend/src/features/form/: login-form.tsx
frontend/src/features/profile-info-card/: edit-profile-button.tsx  profile-info-card.tsx
frontend/src/features/project-card/: content-section.js  project-card.js
frontend/src/features/project-form/: project-form.tsx
frontend/src/hooks/: useClientLoad.tsx
frontend/src/lib/api/: github.ts  likes.ts  projects.ts  user.ts  users.ts
frontend/src/types/: common-types.ts  db-types.ts
frontend/src/utils/: api-utils.ts  project-schema.ts  utils.ts
src/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  tests.py
src/app/routers/: users.py
src/app/scrape/: github.py
(+39 files in other folders)
